# flex-app-2

./: Dockerfile  README.md
back/: .gitignore  README.md  app.py  booking_funcs.py  notifications.py  pyproject.toml  requirements.txt
back/.vim/: tasks.json
front/: .gitignore  package-lock.json  package.json
front/.vim/: coc-settings.json
front/public/: index.html  manifest.json  sw.js
front/src/: App.js  custom.scss  index.js  service-worker.js  swDev.js
front/src/components/: EnablePush.js  Header.js  LoginForm.js  MapForm.js  NavBar.js
front/src/css/: checkbox.css  styles.css
front/src/pages/: Home.js  NoPage.js  Settings.js
